[package]
name = "ankins"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
#reqwest = { version = "0.11", features = ["blocking", "json"] }
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
anki_bridge = { version = "0.10.2", features = ["ureq_blocking"] }
